--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Fragility in the World Map #1</title>
     <!-- Load Leaflet CSS -->
     <link href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" rel="stylesheet">
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="styles.css">
   </head>
   
   <body>
@@ -45,7 +45,7 @@
   </select>
   
   <!-- Load our JavaScript -->
-  <script src="./script.js"></script>
+  <script src="script.js"></script>
   
 </div><!-- end info-sidebar div -->
       
