carto + css fix attempt #2

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   </select>
   
   <!-- Load our JavaScript -->
-  <script src="script.js"></script>
+  <script src="script.js" defer></script>
   
 </div><!-- end info-sidebar div -->
       
